BE-Dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-backend
  labels:
    app: portal-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal-backend
  template:
    metadata:
      labels:
        app: portal-backend
    spec:
      containers:
        - name: springbootapp
          image: raheelaqw1024/species-backend:latest-with-out-EScloud
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: gitlab-registry
