init_containers (1).yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app.kubernetes.io/name: MyApp
spec:
  containers:
  - name: main-container
    image: busybox
    command: ['sleep', '9999999999']
