kubernetes.template.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: _APP_NAME_
  labels:
    app: _APP_NAME_
spec:
  replicas: 3
  selector:
    matchLabels:
      app: _APP_NAME_
  template:
    metadata:
      labels:
        app: _APP_NAME_
    spec:
      containers:
        - name: springbootapp
          image: _IMAGE_
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: gitlab-registry
---
apiVersion: v1
kind: Service
metadata:
  name: _APP_NAME_
  labels:
    app: _APP_NAME_
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
      app: _APP_NAME_

---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
spec:
  type: ExternalName
  externalName: elasticsearch.elasticsearch.svc.cluster.local
  ports:
  - port: 9200
